# dendro

./: .gitignore  .makefileCore.swp  CMakeCache.txt  CMakeLists.txt  EXAMPLES_DOC  INSTALL  PETSC_VER.txt  README  dendro.kdev4  makeVariables  makefile  makefileCore
.kdev4/: dendro.kdev4
Deprecated/: genProjectionFunctions.C  genRegInitStencils.C  testElasMatVecStencilFree.C
Doc/: Doxyfile  DoxyfileNoSources
Doc/html/: Balance_8C-source.html  Balance_8C.html  BlockPart_8C-source.html  BlockPart_8C.html  Coarsen_8C-source.html  Coarsen_8C.html  Construct_8C-source.html  Construct_8C.html  OctFunctions_8C-source.html  OctFunctions_8C.html  Point_8C-source.html  Point_8C.html  Point_8h-source.html  Point_8h.html  ProlongMatVec_8C-source.html  ProlongMatVec_8C.html  RestrictMatVec_8C-source.html  RestrictMatVec_8C.html  RmatType1StencilsAux_8C-source.html  RmatType1StencilsAux_8C.html  RmatType2StencilsAux_8C-source.html  RmatType2StencilsAux_8C.html  Sort_8h-source.html  Sort_8h.html  TreeNodePointer_8C-source.html  TreeNodePointer_8C.html  TreeNodePointer_8h-source.html  TreeNodePointer_8h.html  TreeNode_8C-source.html  TreeNode_8C.html  TreeNode_8h-source.html  TreeNode_8h.html  TreeNode_8txx-source.html  TreeNode_8txx.html  VtxMaps_8C-source.html  VtxMaps_8C.html  annotated.html  binUtils_8C-source.html  binUtils_8C.html  binUtils_8h-source.html  (+525 more)
Manual/: Manual.tex
Manual/figures/: child0.sk  child0.tex  child1.sk  child1.tex  child2.sk  child2.tex  child3.sk  child3.tex  child4.sk  child4.tex  child5.sk  child5.tex  child6.sk  child6.tex  child7.sk  child7.tex  ghosts.sk  ghosts.tex  hanging.sk  hanging.tex  negSearch.sk  negSearch.tex  negSwap.sk  negSwap.tex  test.sk
Matlab/: J1AllCombinations.m  J1J2.m  J2Allcombo.m  K1K2.m  cNumBasedHangingMasks.m  coarseShapeFunction3D.m  coarseShapeFunction3DCoeffs.m  computeAllMatrices3D.m  computeGradDivType2.m  computeL2basedRPstencilsType1.m  computeL2basedRPstencilsType2.m  computeLapStencilsType1.m  computeLapStencilsType2.m  computeMassInvMatrixStencil.m  computeMassMatrixStencil.m  computeMassStencilsType1.m  computeMassStencilsType2.m  computeRPstencilsType1.m  computeRPstencilsType2.m  computeShFnCoeffs.m  computeShFnMat.m  consQtree.m  dispOct.m  dotProduct.m  doubleDotProduct.m  elem2DJacTransform.m  elem3DJacTransform.m  elemsIntersect.m  evalGradPhi.m  evalPhi.m  fineOnCoarseShapeFunction3D.m  fineOnCoarseShapeFunction3DCoeffs.m  gen3d.m  genLapAndMassStencils.m  getBrother.m  getNeighboringCnumAndSizes.m  getParent.m  globalLocalCnumBased.m  gradPsi.m  listCoarsePtsAroundFinePt.m  (+23 more)
SC15Poster/abstract/: ExtendedAbstract.aux  ExtendedAbstract.out  ExtendedAbstract.tex  ExtendedAbstract.tex.backup  ExtendedAbstractRelatedLiterature.odt  abstract
Stencils/: GDType2Stencils.inp  LapType1Stencils.inp  LapType2Stencils.inp  MassType1Stencils.inp  RHSType2Stencils.inp  RmatType1Stencils.inp  ShapeFnCoeffs.inp
data/: p1K.pts  p2K.pts
examples/: buildDA.C  checkError.C  dumpMesh.C  elasticityJac.C  elasticitySolver.C  handleStencils.h  handleType1Stencils.C  handleType2Stencils.C  justCoarsen.C  massMatrix.h  matProp.C  newElasMesh.C  newElasSolver.C  octLaplacian.C  odaJac.C  odaJac.h  omgJac.h  omgNeumann.C  omgNeumann_ex2.C  omgRhs.C  pts2Mesh.C  runScal.C  testConAndBal.C  testConBalAndCoarsen.C  testElasMatVec.C  tstMatVec.C  tstMg.C  tstRegularMg.C  tstRipple.C
examples/Stencils/: MassType2Stencils.inp  ShFnStencils.inp
examples/include/: elasticityJac.h  genPts_par.h  handleStencils.h  octreeStatistics.h  omgJac.h  omgNeumann.h  stiffnessMatrix.h  vecMass.h
include/: Point.h  TreeNode.h  TreeNode.tcc  TreeNodePointer.h  dendro.h  dendro.h.in  dendro_vtk.h  dynamicPartition.h  externVars.h  hcurvedata.h  hilbert.h  indexHolder.h  mainpage.h  morton.h  nodeAndValues.h  octUtils.h  parUtils.tcc  rotation.h  sfc.h  sys.h  treenode2vtk.h
include/binOps/: binUtils.h
include/fem/: feMat.h  feMatrix.h  feMatrix.txx  feVec.h  feVector.h  feVector.tcc  timeInfo.h
include/hilbert/: hilbert.h  morton.h  sfc.h
include/oct/: TreeNode.h  TreeNode.txx  nodeAndRanks.h  nodeAndValues.h  octUtils.h
include/oda/: Sort.h  cnumEtypes.h  loopCounters.h  matRecord.h  oda.h  oda.txx  odaUtils.h  odaUtils.txx  updateCtx.h
include/omg/: blockDiag.h  omg.h
include/omp_par/: ompUtils.txx
include/par/: parUtils.h  parUtils.txx  parUtils_old.txx
include/pc/: blockDiag.h
include/point/: Point.h
include/seq/: seqUtils.h  seqUtils.txx
include/test/: testUtils.h  testUtils.tcc
include/visualization/: treenode2vtk.h
jobScripts/: cleanUp.Ronaldo  downSample.pbs  downSample.sh  justBal.pbs  justBal.sh  justCoarsen.sh  newElas.pbs  rippleBal.sh  runScal.sh  testElasMatVec.pbs  testElasticity.pbs.sh  testLoop.pbs  testMg.pbs  testMg.pbs.sh  testRegMg.pbs.sh  testRipple.pbs  testRunScal.pbs  testSetUp.pbs.sh  tryMinv.sh  tryMinvSkew.sh  tstCoarsen.sh  tstMatVec.pbs  tstMg.sh  tstOda.sh  tstRPreg.sh  tstRegMg.sh  tstRipple.sh  tstRunScal.sh  tstSetUp.sh  tstSetUp2.sh  tstXt3.sh
lib/: emptyFile
octreeVisualization/: SamplePointsFormat.vtk  distPts2Vtk.C  genVtk2.C  generateVTK.C  generateVTKSliceXYZ.C  matProp2Vtk.C  mergeDynamicOct.py  pts2Vtk.C  solAtSlice_0.3.vtk
scripts/: addStd.sh  chkExhaustiveElemType.C  copyInpType2.sh  copyInpType3.sh  g2RealLog.C  gen2spheres.C  genCornerGaussians.C  genDoubleGaussians.C  genDoubleLogNormPrl.C  genDoubleLogNormSeq.C  genFBMpts.C  genGTpts.C  genGaussSeq.C  genLogNormSeq.C  genOctantCenters.C  genPeaksPts.C  genPrlFBMpts.C  getCnumBasedEtype.C  getShapeFnSupport.C  getShapeFnSupport.h  mergeELfiles.C  mergeMfiles.C  mergeNLfiles.C  mergeOct.py  mergePoints.C  remInp.sh  rename.sh  rmStd.sh  splitOct.py  splitPoints.C  splitPts.py  tstRunScal.sh
src/: TreeNode.cpp  TreeNodePointer.cpp  balance.cpp  blockPart.cpp  coarsen.cpp  construct.cpp  dendro_vtk.cpp  dynamicPartition.C  hcurvedata.cpp  hilbert.cpp  morton.cpp  octFunctions.cpp  pickBdy.cpp  rotation.cpp  sfc.cpp  sys.cpp  treenode2vtk.cpp
src/binOps/: binUtils.C
src/hilbert/: hilbert.cpp  morton.cpp  rotation.cpp  (+1 more)
(+95 files in other folders)
